# Test

./: .gitignore  Cargo.toml  Grafici_tesi_magistrale.ipynb  README.md
grafici/: G10_scrittura_db_semplice.csv  G11_lettura_db_semplice.csv  G12_scrittura_db_ca.csv  G3_scrittura_streams_pc_devnet_vs_mainnet.csv  G4_lettura_streams_pc_devnet_vs_mainnet.csv  G7_lettura_streams_pc_devnet_mainnet_vs_rasp_devnet_mainnet.csv  Grafici_tesi_magistrale.ipynb
identity/: Cargo.toml  README.md
identity/.stronghold/: issuer-strong.hodl
identity/src/: main.rs
identity/src/identity/: identity.rs
info_net/: Cargo.toml  README.md
risultati_grafici/: G1_scrittura_semplice_pc_mainnet_vs_devnet.csv  G2_lettura_semplice_pc_devnet_vs_mainnet.csv  G4_lettura_streams_pc_devnet_vs_mainnet.csv  G5_scrittura_streams_pc_devnet_mainnet_vs_rasp_devnet_mainnet.csv  G5_scrittura_streams_pc_vs_rasp_devnet.csv  G5_scrittura_streams_pc_vs_rasp_devnet_vs_mainnet.csv  G6_lettura_streams_pc_vs_rasp_devnet_vs_mainnet.csv  (+1 more)
src/: lib.rs  (+1 more)
test_1/: Cargo.toml  README.md
test_1/risultati/: risultato_t1_devnet.csv  risultato_t1_mainnet.csv
test_1/src/: lib.rs  main.rs
test_1/src/test_1/: mod.rs  post_messages.rs  test_1.rs
test_1/src/utility/: generazione_casuale.rs  mod.rs  scrittura_file.rs
test_3_4/: Cargo.toml  README.md
test_3_4/risultati/: risultato_t3_devnet.csv  risultato_t3_devnet_pc.csv  risultato_t3_devnet_rasp.csv  risultato_t3_mainnet.csv  risultato_t3_mainnet_rasp.csv  risultato_t4_devnet.csv  risultato_t4_devnet_rasp.csv  risultato_t4_mainnet.csv  risultato_t4_mainnet_rasp.csv
test_3_4/src/: lib.rs  main.rs
test_3_4/src/test_3/: mod.rs  scrittura_messaggi_stream.rs
test_3_4/src/test_4/: lettura_messaggi_stream.rs  mod.rs
test_3_4/src/utility/: generazione_casuale.rs
test_7_8/: Cargo.toml  README.md
test_7_8/risultati/: risultato_t7_lettura.csv  risultato_t7_scrittura.csv  risultato_t8_lettura.csv  risultato_t8_scrittura.csv
test_7_8/src/: lib.rs  main.rs
test_7_8/src/test_7/: mod.rs  scrittura_lettura_messaggi_semplici.rs
test_7_8/src/test_8/: mod.rs  scrittura_lettura_messaggi_ca.rs
test_7_8/src/utility/: scrittura_file.rs
(+47 files in other folders)
