[package]
name = "test_pc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
tokio = {version = "1.29.1", features = ["full"]}
rand = "0.8.5"
iota-client = { git = "https://github.com/iotaledger/iota.rs", branch = "production" }