[package]
name = "test_identity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
tokio = {version = "1.29.1", features = ["full"]}
identity_iota = { version = "0.6" }
pretty_env_logger = "0.5.0"
serde_json = "1.0.104"