[package]
name = "test_3_4"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-streams = { git = "https://github.com/iotaledger/streams", branch = "develop" }
iota-crypto = { git = "https://github.com/iotaledger/crypto.rs", features = ["random"], branch = "dev" }
anyhow = "1.0.72"
allow = "0.1.5"
tokio = {version = "1.29.1", features = ["full"]}
rand = "0.8.5"
csv = "1.2.2"